--- a/Desafios/Desafio-12/estilo/style.css
+++ b/Desafios/Desafio-12/estilo/style.css
@@ -19,6 +19,8 @@ html, body{
     min-height: 100%;
     background-color: darkgrey;
     font-family: var(--fonte1);
+    max-width: 1200px;
+    margin: auto;
 }
 
 header{
@@ -48,6 +50,10 @@ header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -65,12 +71,26 @@ section.normal{
 section.imagem{
     background-color: rgb(63, 63, 63);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.516);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.484);
     padding: 6px;
+    text-shadow: 2px 2px 0px black;
+}
+
+#img001{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img002{
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer{
