--- a/Desafios/Desafio-13/estilo/style.css
+++ b/Desafios/Desafio-13/estilo/style.css
@@ -44,3 +44,22 @@ iframe#tela{
     width: 266px;
     height: 471px;
 }
+
+section#rede-sociais{
+    text-align: right;
+}
+
+section#rede-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.459);
+}
+
+section#rede-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.59);
+    transition: transform 0.3s , border 0.3s;
+    
+}
